Ajustes para upload de foto em base64